fixed accordion answer spacing

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1465,7 +1465,11 @@ section.wedding-info {
 }
 
 .answer {
-    padding: 18px 30px 30px 18px;
+    padding: 10px 18px 22px 18px;
+}
+
+.answer p {
+    margin: 0;
 }
 
 .question:hover {
